CEN-42 refactor: route weight api
